samples/_failures_safe/1761166971_901179_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d172c51c.c: In function ‘main’:
./samples/SAFE/__tmp_d172c51c.c:160:5: error: expected declaration or statement at end of input
  160 |     if (len == 0) {
      |     ^~
./samples/SAFE/__tmp_d172c51c.c:160:5: error: expected declaration or statement at end of input
